--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						</div>
 						<footer class="major">
 							<ul class="actions special">
-								<li><a href="#" class="button">Chat with expert on whatsapp</a></li>
+								<li><a href="https://wa.me/message/YDGMJWDHWIBRN1" class="button">Chat with expert on whatsapp</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -93,7 +93,7 @@
 						<li><a href="phoenix.career.counseling@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Phoenix Career Counselling All rights reserved.</li><li>Design: <a href="http://html5up.net">Krishna Kumar Singh</a></li>
+						<li>&copy; Phoenix Career Counselling All rights reserved.</li><li>Developed: <a href="https://www.linkedin.com/in/imkks/">Krishna Kumar Singh</a></li>
 					</ul>
 				</footer>
 
